# ChangeLog for games-simulation/secondlife-bin
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Dec 2007; MATSUU Takuto <matsuu@gentoo.org> ChangeLog:
  Version bumbed.

  23 Sep 2007; MATSUU Takuto <matsuu@gentoo.org> ChangeLog:
  Version bumped.

  13 Jul 2007; MATSUU Takuto <matsuu@gentoo.org> +metadata.xml,
  -secondlife-bin-1.17.0.12.ebuild, -secondlife-bin-1.17.2.0.ebuild,
  -secondlife-bin-1.17.3.0.ebuild, secondlife-bin-1.17.3.1.ebuild,
  secondlife-bin-1.18.0.6.ebuild:
  Cleanup.
