@@ -1,8 +1,8 @@
 DIST SecondLife_i686_1_18_5_3.tar.bz2 52351029 RMD160 b5c1f3be6eb3343ec2c06cba84a20c055f53b5ed SHA1 778d4af271179c12f614ed2e9e7d52fe43ffc315 SHA256 9fcf392004e66af353c457b6af5153d254ecfbb76735f4f4a8dcc67ca7db1a07
 DIST SecondLife_i686_1_18_6_3_RELEASECANDIDATE.tar.bz2 52928435 RMD160 56c84747340a47bd828d842e0467c3532381b86f SHA1 16c6a38a8a9cc334024becd1ae4b4c78c88570cd SHA256 281fdf02331b2fb2fb06ba4778045070ec42bbac09fd98fe119343608797fe17
 DIST SecondLife_i686_1_18_6_76453_WINDLIGHT.tar.bz2 53206369 RMD160 06df8cca20434638ca38995c30717866ce843844 SHA1 92fe976cb3407ff469f9f96551484fcfa51b309e SHA256 70006926fcf13ca605f96cbf8860bd1e99897c9cb3ad2a6849e586e514444def
-EBUILD secondlife-bin-1.18.5.3.ebuild 2114 RMD160 c70155fb40286a0b5b114f1306aa2642532050c5 SHA1 b3ca4229738710099ec80239a65afdf943345cd2 SHA256 30402851d74759f898199b126667fd6b3f144a55fe43deeb9d6cabc684694c3b
-EBUILD secondlife-bin-1.18.6.3_rc.ebuild 2344 RMD160 a6e85614fca269d6fef34c2e997450f6ca483659 SHA1 94a49eea00630cba029c8e69e250c58eb91ea3cc SHA256 0e388f39726b7703d5cd8d1175fe442c93891c64d3cf58d5c6e65362671c2fa2
-EBUILD secondlife-bin-1.18.6.76453_alpha.ebuild 2223 RMD160 417f5b8806c5687014363ed007e2900f938736ec SHA1 84f5dc0469bf4205b7a65d1d24b16d3de92edaa7 SHA256 17b305f2cf7ff42451be2325ddd9204f04ea8a8da0a06aae9a28df20d03617e1
-MISC ChangeLog 536 RMD160 2c8b54afe2bb4e42fc50cb1aa4d6a2d4ce65c96d SHA1 e045bf471a2273488c42f29aace8c856fb1182d0 SHA256 5c174fe024107b6260c9765d0594e565d91408c249f166357c298e5e44becddf
+EBUILD secondlife-bin-1.18.5.3.ebuild 2110 RMD160 a303f039e17ab48a216c1f19dbce13aad8a22bcd SHA1 19c4175736106b10d3449da7ca0e8f91ce391574 SHA256 3445224831fc1bf6fd97119a46bc50a3168bbd680a8a919c559be647854cc2df
+EBUILD secondlife-bin-1.18.6.3_rc.ebuild 2340 RMD160 f9f5d9d2fec14a46c4af9eaded9a7917a129f826 SHA1 4caf5bdf0670f500a7cdca55de2e918067734a40 SHA256 96a1a1af833ab62fd8dffced4c8780dda875432a56e33f6d7115d5471a4a1f77
+EBUILD secondlife-bin-1.18.6.76453_alpha.ebuild 2219 RMD160 e51584e66c19bc2105d6e3e8dce60e14c7ebd734 SHA1 73e933dd355210b468e6a0166d18ecf1290fe9da SHA256 1966f33e4cf881dd5a5b81af63347425d7430c4f2125db46724a649ebb7586aa
+MISC ChangeLog 776 RMD160 0968b402dea76bd8e11a9aed39347849b0a1e16d SHA1 5e0296affa6b58ef163c2acd2c49568245304d74 SHA256 3075b35065433c6f79843ee36b433f37244146b791d68dc316d83eb1c1484b52
 MISC metadata.xml 248 RMD160 ade4235c4b35539d6cccd6005afba23a7c9d2afd SHA1 e6af7cb4622744522ecc176d800015b77cd75d81 SHA256 5d0b7e035a2cb76eeb00ece66b18b59060068ea76dd196e6cd4f4524c92cde17
