@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 May 2008; Piotr Szymaniak <lazy_bum@o2.pl>
+  secondlife-bin-1.18.5.3.ebuild, secondlife-bin-1.18.6.3_rc.ebuild,
+  secondlife-bin-1.18.6.76453_alpha.ebuild:
+  Remove icon extension from desktop entry to match Icon Theme Specification.
+
   08 Dec 2007; MATSUU Takuto <matsuu@gentoo.org> ChangeLog:
   Version bumbed.
 
